@@ -1,3 +1,11 @@
+2025-10-15 Massimo Manghi <mxmanghi@apache.org>
+    * rivet/packages/dio/dio_Tdbc.tcl: reimplementing methods
+    update, delete and insert to enable DIO Tdbc driver to handle also
+    SQL queries using the TDBC named argument substitution
+    * rivet/packages/dio/dio.tcl: better handling of the special field
+    formatter. The special fields formatter usage disables on specific
+    tables the SQL queries with named arguments substitution
+ 
 2025-10-07 Massimo Manghi <mxmanghi@apache.org>
 	* rivet/packages/dio/dio_Tdbc.tcl: removing method insert from
 	class ::DIO::Tdbc, the real responsible of honoring SQL statements
